feat: team page

--- a/src/components/molecules/Nav.astro
+++ b/src/components/molecules/Nav.astro
@@ -8,12 +8,16 @@ const links = [
         href:"/"
     },
     {
+        name:"Notre équipe",
+        href:"/notre-equipe/"
+    },
+    {
         name:"Réalisations",
-        href:"/realisations"
+        href:"/realisations/"
     },
     {
         name:"Contact",
-        href:"/contact"
+        href:"/contact/"
     }
 ]
 ---
