fix(nav): button size

--- a/src/components/molecules/Nav.astro
+++ b/src/components/molecules/Nav.astro
@@ -34,10 +34,10 @@ const links = [
                     <a href={link.href} class={"transition hover:underline " + (((url.pathname.startsWith(link.href) && link.href != "/") || (link.href == "/" &&  link.href == url.pathname)) ? 'text-primary' : 'hover:text-primary')}>{link.name}</a>
         )}
     </div>
-    <button id="toggle-menu" class="z-30 flex flex-col h-5 gap-1 lg:hidden">
-        <div class="w-6 h-1 transition-all rounded-full bg-primary-darker"></div>
-        <div class="w-6 h-1 transition-all rounded-full bg-primary-darker"></div>
-        <div class="w-6 h-1 transition-all rounded-full bg-primary-darker"></div>
+    <button id="toggle-menu" class="z-30 flex flex-col w-10 h-10 gap-1 pt-4 overflow-hidden lg:hidden">
+        <div class="w-8 h-1 transition-all rounded-full bg-primary-darker"></div>
+        <div class="w-8 h-1 transition-all rounded-full bg-primary-darker"></div>
+        <div class="w-8 h-1 transition-all rounded-full bg-primary-darker"></div>
         <span class="sr-only">Menu</span>
     </button>
 </nav>
