--- a/src/components/molecules/Contactform.astro
+++ b/src/components/molecules/Contactform.astro
@@ -6,7 +6,7 @@ const commonStyle = "px-4 py-2 rounded-tl-lg rounded-tr-lg" + " "
 const answerStyle = commonStyle + "self-end rounded-bl-lg bg-primary-lighter text-lwhite"
 const loakStyle = commonStyle + "rounded-br-lg bg-lwhite self-start"
 ---
-<form id="contactform" action="/send" name="contact" data-netlify="true" class="relative flex flex-col max-w-6xl gap-3 p-4 mx-auto shadow-lg lg:px-16 lg:py-24 bg-lgrey-light lg:rounded-3xl">
+<form id="contactform" name="contact" data-netlify="true" class="relative flex flex-col max-w-6xl gap-3 p-4 mx-auto lg:shadow-lg lg:px-16 lg:py-24 lg:bg-lgrey-light lg:rounded-3xl">
     <p class={loakStyle + " " +"ml-16 message"}>Bonjour 👋</p>
     <div class="flex items-center message">
         <figure class="flex items-center justify-center w-10 h-10 mr-6 rounded-full bg-lwhite">
