fix(nav): from mob to desktop works now

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -38,7 +38,7 @@ const url = new URL(Astro.request.url)
   import '../scripts/app.js';
 </script>
 </head>
-<body class="flex flex-col min-h-screen overflow-x-hidden bg-lwhite">
+<body class="flex flex-col min-h-screen overflow-x-hidden lg:overflow-y-auto bg-lwhite">
 <Nav/>
      <div class="flex-1">
      <slot />
