--- a/src/components/molecules/Breadcrumb.astro
+++ b/src/components/molecules/Breadcrumb.astro
@@ -2,10 +2,12 @@
 const {link,current} = Astro.props
 const linkStyle = "hover:underline after:inline-block hover:after:no-underline after:content-['/'] after:mx-2"
 ---
-<nav class="px-4 mx-auto mb-16  md:px-12 max-w-8xl text-lgrey-dark">
+<nav class="px-4 mx-auto mb-16 md:px-12 max-w-8xl text-lgrey-dark">
     <a href="/" class={linkStyle}>Accueil</a>
     {link &&
-        <a class={linkStyle} href={link.href}>{link.title}</a>
+        link.map(l=>
+        <a class={linkStyle} href={l.href}>{l.title}</a>
+        )
     }
     <span class="text-lblack">
         {current}
