--- a/src/components/molecules/TagPicker.astro
+++ b/src/components/molecules/TagPicker.astro
@@ -1,14 +1,15 @@
 ---
-const {tags} = Astro.props
+import config from "../../../config";
+const {tags,current} = Astro.props
 ---
 
 <div class="flex flex-wrap w-full max-w-6xl px-4 mx-auto mt-20 gap-7 xl:px-0">
-    <button class="p-3 transition border-2 rounded-lg hover:border-primary-darker"  data-tag-picker="all" data-active="true">
+    <a href="/blog/" class={"p-3 transition border-2 rounded-lg hover:border-primary-darker" + " " + ("index" == current ? 'bg-primary-darker text-white border-primary-darker' :null)}  data-tag-picker="all" data-active="true">
         Tous les articles
-    </button>
+    </a>
     {tags.map(tag=>
-        <button class="p-3 capitalize transition border-2 rounded-lg hover:border-primary-darker" data-tag-picker={tag.name} data-active="false">
+        <a href={"/blog/" + config.createSlug(tag.name) + "/1"} class={"p-3 transition border-2 rounded-lg hover:border-primary-darker" + " " + (config.createSlug(tag.name) == current ? 'bg-primary-darker text-white border-primary-darker' :null)}>
             {tag.name} 
-        </button>
+        </a>
     )}
 </div>
