--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -5,6 +5,7 @@ import Breadcrumb from "../../components/molecules/Breadcrumb.astro";
 import BlogNextArticle from "../../components/atoms/BlogNextArticle.astro";
 import Ctacontact from "../../components/molecules/Ctacontact.astro";
 import LastArticles from "../../components/atoms/LastArticles.astro";
+import config from "../../../config";
 export async function getStaticPaths() {
 const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${"0N5jxUC1Wq7PEsvMxAOmrgtt"}&starts_with=articles&cv=${Date.now()} `)
 const {stories} = await data.json()
@@ -29,7 +30,7 @@ const lastArticles = posts.slice(0,3)
 ---
 
 <Main title={currentPost.content.title + " | loak.studio"} description={currentPost.content.intro} image={"https:"+currentPost.content.image}>
-    <Breadcrumb link={{title:'Blog',href:"/blog/"}} current={currentPost.content.title}/>
+    <Breadcrumb link={[{title:'Blog',href:"/blog/"},{title:currentPost.tag_list[0],href:"/blog/" + config.createSlug(currentPost.tag_list[0]) + "/1/"}]} current={currentPost.content.title}/>
     <div class="flex items-start justify-between w-full max-w-6xl px-4 mx-auto xl:px-0">
         <article id="blog-post" class="w-full relative max-w-[64ch]">
             <figure class="relative w-full">
