feat(layout): update description & clean files

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -3,7 +3,7 @@ import Nav from "../components/molecules/Nav.astro"
 import Footer from "../components/molecules/Footer.astro"
 import "../style/tailwind.css"
 
-const {title = "loak.studio - Création de sites web dans la région de Tournai | Belgique",description = "loak.studio - Création de sites web dans la région de Tournai | Belgique", image = "https://loak.studio/share.png"} = Astro.props
+const {title = "loak.studio - Création de sites web dans la région de Tournai | Belgique",description = "Nous sommes une équipe des développeurs et designer dans la région de Tournai en Belgique et sommes disponibles pour vous aider dans vos projets digitaux que nous réalisons 100% à la main.", image = "https://loak.studio/share.png"} = Astro.props
 const url = new URL(Astro.request.url)
 ---
 <!DOCTYPE html>
