style(ctacontact): remove mobile shadow

--- a/src/components/molecules/Ctacontact.astro
+++ b/src/components/molecules/Ctacontact.astro
@@ -3,7 +3,7 @@ import Icon from "../atoms/Icon.astro"
 import Mail from "../../images/mail.webp"
 ---
 
-<section class="relative flex flex-col max-w-6xl p-4 mx-auto transition-all shadow-lg md:flex-row mt-36 group hover:opacity-80 bg-lgrey-light lg:rounded-3xl">
+<section class="relative flex flex-col max-w-6xl p-4 mx-auto transition-all lg:shadow-lg md:flex-row mt-36 group hover:opacity-80 bg-lgrey-light lg:rounded-3xl">
     <img class="w-full h-full max-w-xs mx-auto -mt-24" src={Mail} alt="">
     <div class="flex flex-col gap-4 lg:pt-24 lg:pb-28">
     <h2 class="text-5xl">Prêt à lancer votre projet?
