--- a/src/components/molecules/OurSolutions.astro
+++ b/src/components/molecules/OurSolutions.astro
@@ -4,20 +4,20 @@ import bulb from "../../images/bulb.webp"
 
     <h2 class="h-auto col-span-2 mb-20 text-5xl text-center mt-36">Nos solutions</h2>
 <section class="relative max-w-6xl grid-cols-2 grid-rows-2 gap-6 mx-auto lg:grid">
-    <div id="web-app" class="flex flex-col items-center justify-between row-span-2 gap-4 p-4 lg:p-12 lg:bg-primary lg:rounded-3xl lg:text-lwhite">
-        <h3 class="text-3xl">Application web</h3>
-        <p>Notre équipe de développeur est capable de développer votre application web <strong>sur mesure</strong>. Nous ne sommes pas limités par l'utilisation de CMS tiers donc <strong>tout est envisageable pour répondre au mieux à votre problématique.</strong></p>
+    <div id="web-app" class="flex flex-col justify-between row-span-2 gap-4 p-4 lg:items-center lg:p-12 lg:bg-primary lg:rounded-3xl lg:text-lwhite">
+        <h3 class="text-3xl">Sur mesure</h3>
+        <p>Notre équipe intègre de vrais développeurs, nous créons nos solutions sur mesure avec des langages de programmation modernes. C'est pour cela que tout est envisageable même si vos problématiques sortent de l'ordinaire.</p>
         <figure class="max-w-xs">
             <img src="/portfolio/mon-cv/mockup.png" alt="">
         </figure>
     </div>
     <div id="e-commerce" class="flex flex-col gap-4 p-4 lg:p-12 lg:bg-primary-darker lg:rounded-3xl lg:text-lwhite">
-        <h3 class="text-3xl">e-commerce</h3>
-        <p>Les sites web e-commerce permettent de vendre vos produits à travers le monde de manière efficace et automatisée. Pas besoin de grosse structure, nous avons la solution qui correspond à votre problème.</p>
+        <h3 class="text-3xl">E-commerce</h3>
+        <p>Boutique sur mesure, personnalisation de thème Shopify ou simple instance de paiment en ligne. Nous pouvons répondre à ces besoins, et plus encore, afin de vous créer un flux automatisé de vente.</p>
     </div>
     <div id="site-vitrine" class="flex flex-col gap-4 p-4 lg:p-12 lg:bg-lgrey-light lg:rounded-3xl">
         <h3 class="text-3xl">Site vitrine</h3>
-        <p><strong>A votre image</strong> et selons vos désires, nous designons et codons votre site internet. De cette manière, il correspondra à vos attentes et celles de votre marché et sera <strong>optimisé</strong> en terme de performance et de SEO.</p>
+        <p>A votre image et selons vos désires, nous designons et codons votre site internet. De cette manière, il correspondra à vos attentes et celles de votre marché et sera optimisé en terme de performance et de SEO. De plus, nous utilisons des CMS puissants pour vous laisser gérer votre site.</p>
     </div>
     <img id="bulb" class="absolute hidden w-56 right-5 -top-32 -rotate-12 lg:block 2xl:-right-20" src={bulb} alt="">
 </section>
