--- a/src/components/organisms/BlogList.astro
+++ b/src/components/organisms/BlogList.astro
@@ -3,7 +3,7 @@
 ---
 <div id="blog" class="grid w-full max-w-6xl gap-4 px-4 mx-auto mt-10 md:grid-cols-3 lg:px-0">
 {posts.map(post=>
-    <article data-post-tag={post.tag_list[0]} class="relative w-full p-2 transition md:max-w-xs rounded-2xl bg-lgrey-light hover:shadow-lg hover:-translate-y-2">
+    <article class="relative w-full p-4 transition lg:p-2 md:max-w-xs rounded-2xl bg-lgrey-light hover:shadow-lg hover:-translate-y-2">
         <figure>
             <img class="w-full rounded-2xl" src={post.content.image} alt="">
         </figure>
