--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -29,7 +29,7 @@ import bag from "../images/hero/bag-dynamic-clay.png"
 
         </div>
             <h1 class="max-w-3xl text-5xl leading-tight text-center md:text-8xl">Oups !</h1>
-            <p class="max-w-xl text-center text-lgrey-dark">La page que vous avez demandé n'existe pas..</p>
+            <p class="max-w-xl text-center text-lgrey-dark">La page que vous avez demandée n'existe pas..</p>
             <div class="flex flex-col gap-4 md:gap-10 md:flex-row">
                 <CustomButton href="/">
                     Retourner à l'accueil
