--- a/src/components/molecules/WhoAreWe.astro
+++ b/src/components/molecules/WhoAreWe.astro
@@ -1,7 +1,7 @@
 <section class="items-center w-full max-w-6xl grid-cols-2 px-4 mx-auto lg:grid mt-36 lg:px-0">
     <h2 class="col-span-2 mb-4 text-5xl text-center">Qui sommes-nous?</h2>
     <p>Nous sommes une équipe de trois personnes, <a class="font-bold hover:underline" href="https://galandtristan.be" target="_blank">Tristan Galand</a>, <a class="font-bold hover:underline" href="https://geets.dev" target="_blank">Benjamin Geets</a> et <a class="font-bold hover:underline" href="https://mlava.dev" target="_blank">Mathieu Lava</a>, qui ont à cœur de défendre une vision du web moderne. 
-    Nous avons chacun notre spécialité, du code au design d'interface, ce qui nous permet d'être très versatile et de s'adapter aux envies et besoin de nos clients.
+    Nous avons chacun notre spécialité, du code au design d'interface, ce qui nous permet d'être très flexible et de s'adapter aux envies et besoin de nos clients.
     </p>
     <figure class="overflow-hidden lg:ml-7 mt-14">
         <img loading="lazy" class="object-contain w-full rounded-3xl" src="/equipe.jpg" alt="Equipe de Loak.studio">
