--- a/src/pages/realisations/[slug].astro
+++ b/src/pages/realisations/[slug].astro
@@ -3,28 +3,29 @@ import Main from "../../layouts/Main.astro"
 import ProjectHeader from "../../components/molecules/ProjectHeader.astro"
 import Breadcrumb from "../../components/molecules/Breadcrumb.astro"
 import Ctacontact from "../../components/molecules/Ctacontact.astro"
+import { Markdown } from 'astro/components';
 export async function getStaticPaths() {
-  const data = await Astro.glob('../../data/portfolio/*.md')
-  data.forEach(d=>{
-  })
-  return data.map(project=>{
+  const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${"0N5jxUC1Wq7PEsvMxAOmrgtt"}&starts_with=realisations&cv=${Date.now()} `)
+  const { stories } = await data.json()
+  return stories.map(project => {
     return {
-      params:{
-        slug:project.frontmatter.slug
+      params: {
+        slug: project.content.slug
       },
-      props:{
+      props: {
         project
       }
     }
   })
 }
-const {project} = Astro.props
+const { project } = Astro.props
 ---
-<Main title={project.frontmatter.title + " | loak.studio"}   description={project.frontmatter.description}>
-    <Breadcrumb link={[{title:'Réalisations',href:"/realisations"}]} current={project.frontmatter.title}/>
-    <ProjectHeader {...project.frontmatter}/>
-    <article id="md" class="px-4 mt-36 max-w-[64ch] mx-auto">
-        <project.Content/>
-    </article>
-    <Ctacontact/>
+
+<Main title={project.content.title + " | loak.studio" } description={project.content.description}>
+  <Breadcrumb link={[{title:'Réalisations',href:"/realisations"}]} current={project.content.title} />
+  <ProjectHeader {...project.content} />
+  <article id="md" class="px-4 mt-36 max-w-[64ch] mx-auto">
+    <Markdown content={project.content.content} />
+  </article>
+  <Ctacontact />
 </Main>
