--- a/src/pages/realisations/index.astro
+++ b/src/pages/realisations/index.astro
@@ -3,17 +3,20 @@ import Main from "../../layouts/Main.astro"
 import Breadcrumb from "../../components/molecules/Breadcrumb.astro"
 import Project from "../../components/molecules/Project.astro"
 import Rocket from "../../images/rocket.webp"
-const data = await Astro.glob('../../data/portfolio/*.md')
-const first = data[0]
-data.shift()
+const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${"0N5jxUC1Wq7PEsvMxAOmrgtt"}&starts_with=realisations&cv=${Date.now()} `)
+const { stories } = await data.json()
+const first = stories[0]
+stories.shift()
 ---
+
 <Main title="Réalisations | loak.studio">
-    <Breadcrumb current="Réalisations"/>
+    <Breadcrumb current="Réalisations" />
     <section id="page-portfolio" class="relative w-full max-w-6xl mx-auto">
-        <img id="rocket" class="absolute z-10 hidden w-56 -rotate-90 xl:block lg:-right-16 2xl:-right-24" src={Rocket} alt="">
-        <Project {...first.frontmatter}/>
-        {data.map(project=>
-            <Project {...project.frontmatter}/>
+        <img id="rocket" class="absolute z-10 hidden w-56 -rotate-90 xl:block lg:-right-16 2xl:-right-24" src={Rocket}
+            alt="">
+        <Project {...first.content} />
+        {stories.map(project=>
+        <Project {...project.content} />
         )}
     </section>
 </Main>
