fix(realisations): add href from storyblok

--- a/src/components/molecules/ProjectHeader.astro
+++ b/src/components/molecules/ProjectHeader.astro
@@ -1,5 +1,5 @@
 ---
-const { mockup, title, type, date, description, slug, href } = Astro.props
+const { mockup, title, type, date, description, href } = Astro.props
 ---
 
 <section class="flex flex-col items-center max-w-6xl gap-4 px-4 mx-auto lg:flex-row lg:gap-14 mt-14 lg:px-0">
