feat(hero): add WebP

--- a/src/components/molecules/Hero.astro
+++ b/src/components/molecules/Hero.astro
@@ -1,20 +1,49 @@
 ---
 import CustomButton from "../atoms/CustomButton.astro"
-import mail from "../../images/hero/mail-dynamic-clay.png"
-import computer from "../../images/hero/computer-dynamic-clay.png"
-import figma from "../../images/hero/figma-dynamic-clay.png"
-import lock from "../../images/hero/lock-dynamic-clay.png"
-import bag from "../../images/hero/bag-dynamic-clay.png"
+import mailPng from "../../images/hero/mail-dynamic-clay.png"
+import computerPng from "../../images/hero/computer-dynamic-clay.png"
+import figmaPng from "../../images/hero/figma-dynamic-clay.png"
+import lockPng from "../../images/hero/lock-dynamic-clay.png"
+import bagPng from "../../images/hero/bag-dynamic-clay.png"
+
+import mailWebp from "../../images/hero/mail-dynamic-clay.webp"
+import computerWebp from "../../images/hero/computer-dynamic-clay.webp"
+import figmaWebp from "../../images/hero/figma-dynamic-clay.webp"
+import lockWebp from "../../images/hero/lock-dynamic-clay.webp"
+import bagWebp from "../../images/hero/bag-dynamic-clay.webp"
 ---
-<section id="hero" class="opacity-0 px-4 md:px-0 relative min-h-[80vh] flex items-center justify-center mx-auto max-w-8xl mt-12">
-    <img id="mail" class="md:block hidden absolute right-96 top-0 w-36 rotate-[27deg]" src={mail} alt="">
-    <img id="computer" class="absolute w-52 -rotate-[14deg] left-7 top-12" src={computer} alt="">
-    <img id="figma" class="absolute w-36 rotate-[35deg] right-12 top-40 blur-[2px]" src={figma} alt="">
-    <img id="lock" class="absolute rotate-[40deg] w-36 left-0 bottom-10 blur-[3px]" src={lock} alt="">
-    <img id="bag" class="md:block hidden absolute w-36 -rotate-[55deg] bottom-0 right-64" src={bag} alt="">
+
+<section id="hero"
+    class="opacity-0 px-4 md:px-0 relative min-h-[80vh] flex items-center justify-center mx-auto max-w-8xl mt-12">
+    <picture id="mail" class="md:block hidden absolute right-96 top-0 w-36 rotate-[27deg]">
+        <source srcset={mailWebp} type="image/webp">
+        <source srcset={mailPng} type="image/png">
+        <img src={mailPng} alt="">
+    </picture>
+    <picture id="computer" class="absolute w-52 -rotate-[14deg] left-7 top-12">
+        <source srcset={computerWebp} type="image/webp">
+        <source srcset={computerPng} type="image/png">
+        <img src={computerPng} alt="">
+    </picture>
+    <picture id="figma" class="absolute w-36 rotate-[35deg] right-12 top-40 blur-[2px]">
+        <source srcset={figmaWebp} type="image/webp">
+        <source srcset={figmaPng} type="image/png">
+        <img src={figmaPng} alt="">
+    </picture>
+    <picture id="lock" class="absolute rotate-[40deg] w-36 left-0 bottom-10 blur-[3px]">
+        <source srcset={lockWebp} type="image/webp">
+        <source srcset={lockPng} type="image/png">
+        <img src={lockPng} alt="">
+    </picture>
+    <picture id="bag" class="md:block hidden absolute w-36 -rotate-[55deg] bottom-0 right-64">
+        <source srcset={bagWebp} type="image/webp">
+        <source srcset={bagPng} type="image/png">
+        <img src={bagPng} alt="">
+    </picture>
     <div class="relative z-10 flex flex-col items-center gap-10">
         <h1 class="max-w-3xl text-5xl leading-tight text-center md:text-8xl">Vos projets, au pixel près</h1>
-        <p class="max-w-xl text-center text-lgrey-dark">Plus qu'une agence, nous aidons nos clients à réaliser leurs projets avec la solution qui leur convient</p>
+        <p class="max-w-xl text-center text-lgrey-dark">Plus qu'une agence, nous aidons nos clients à réaliser leurs
+            projets avec la solution qui leur convient</p>
         <div class="flex flex-col gap-4 md:gap-10 md:flex-row">
             <CustomButton href="/contact">
                 Demander un devis
