--- a/src/components/molecules/OurRealizations.astro
+++ b/src/components/molecules/OurRealizations.astro
@@ -1,14 +1,22 @@
 ---
 import Icon from "../atoms/Icon.astro"
+import saveurbelgeWebp from "../../images/saveurbelge.webp"
+import saveurbelgePng from "../../images/saveurbelge.png"
 ---
-<section class="relative flex flex-col justify-between max-w-6xl px-4 py-5 mx-auto text-white transition-all lg:items-center lg:flex-row lg:px-24 mt-36 group lg:rounded-3xl bg-primary hover:bg-primary-darker">
+
+<section
+    class="relative flex flex-col justify-between max-w-6xl px-4 py-5 mx-auto text-white transition-all lg:items-center lg:flex-row lg:px-24 mt-36 group lg:rounded-3xl bg-primary hover:bg-primary-darker">
     <div class="flex flex-col gap-4">
         <h2 class="text-5xl lg:max-w-[10ch]">Nos réalisations</h2>
         <p class="lg:max-w-[30ch]">Nous travaillons sur une multitude de projets web, venez les découvrir</p>
     </div>
     <figure class="w-full lg:w-auto">
-        <img class="w-full lg:w-auto" src="/saveurbelge.png" alt="Mockup représentant l'application web SaveurBelge">
-    <a href="/realisations" class="before:absolute before:inset-0"></a>
+        <picture class="w-full lg:w-auto">
+            <source srcset={saveurbelgeWebp} type="image/webp">
+            <source srcset={saveurbelgePng} type="image/png">
+            <img src={saveurbelgePng} alt="Mockup représentant l'application web SaveurBelge">
+        </picture>
+        <a href="/realisations" class="before:absolute before:inset-0"></a>
     </figure>
     <Icon name="right" classes="absolute right-10 bottom-10 group-hover:right-8 transition-all" />
 </section>
