--- a/src/components/molecules/Hero.astro
+++ b/src/components/molecules/Hero.astro
@@ -15,27 +15,27 @@ import bagWebp from "../../images/hero/bag-dynamic-clay.webp"
 
 <section id="hero"
     class="opacity-0 px-4 md:px-0 relative min-h-[80vh] flex items-center justify-center mx-auto max-w-8xl mt-12">
-    <picture id="mail" class="md:block hidden absolute right-96 top-0 w-36 rotate-[27deg]">
+    <picture width="500" height="500" id="mail" class="md:block hidden absolute right-96 top-0 w-36 rotate-[27deg]">
         <source srcset={mailWebp} type="image/webp">
         <source srcset={mailPng} type="image/png">
         <img src={mailPng} alt="">
     </picture>
-    <picture id="computer" class="absolute w-52 -rotate-[14deg] left-7 top-12">
+    <picture width="500" height="500" id="computer" class="absolute w-52 -rotate-[14deg] left-7 top-12">
         <source srcset={computerWebp} type="image/webp">
         <source srcset={computerPng} type="image/png">
         <img src={computerPng} alt="">
     </picture>
-    <picture id="figma" class="absolute w-36 rotate-[35deg] right-12 top-40 blur-[2px]">
+    <picture width="500" height="500" id="figma" class="absolute w-36 rotate-[35deg] right-12 top-40 blur-[2px]">
         <source srcset={figmaWebp} type="image/webp">
         <source srcset={figmaPng} type="image/png">
         <img src={figmaPng} alt="">
     </picture>
-    <picture id="lock" class="absolute rotate-[40deg] w-36 left-0 bottom-10 blur-[3px]">
+    <picture width="500" height="500" id="lock" class="absolute rotate-[40deg] w-36 left-0 bottom-10 blur-[3px]">
         <source srcset={lockWebp} type="image/webp">
         <source srcset={lockPng} type="image/png">
         <img src={lockPng} alt="">
     </picture>
-    <picture id="bag" class="md:block hidden absolute w-36 -rotate-[55deg] bottom-0 right-64">
+    <picture width="500" height="500" id="bag" class="md:block hidden absolute w-36 -rotate-[55deg] bottom-0 right-64">
         <source srcset={bagWebp} type="image/webp">
         <source srcset={bagPng} type="image/png">
         <img src={bagPng} alt="">
