--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -5,10 +5,12 @@
 @font-face {
     font-family: "Lack";
     src: url("/fonts/Lack-Regular.otf");
+    font-display: swap;
 }
 @font-face {
     font-family: "Montserrat";
     src: url("/fonts/Montserrat-VariableFont_wght.ttf");
+    font-display: swap;
 }
 *{
     @apply font-content;
