feat: more explicit sizes

--- a/src/components/molecules/OurRealizations.astro
+++ b/src/components/molecules/OurRealizations.astro
@@ -11,7 +11,7 @@ import saveurbelgePng from "../../images/saveurbelge.png"
         <p class="lg:max-w-[30ch]">Nous travaillons sur une multitude de projets web, venez les découvrir</p>
     </div>
     <figure class="w-full lg:w-auto">
-        <picture class="w-full lg:w-auto">
+        <picture width="500" height="500" class="w-full lg:w-auto">
             <source srcset={saveurbelgeWebp} type="image/webp">
             <source srcset={saveurbelgePng} type="image/png">
             <img src={saveurbelgePng} alt="Mockup représentant l'application web SaveurBelge">
