--- a/src/components/molecules/WhatIsLoak.astro
+++ b/src/components/molecules/WhatIsLoak.astro
@@ -4,7 +4,7 @@ import computerWebp from "../../images/hero/computer-dynamic-clay.webp"
 ---
 
 <section class="flex flex-col items-center max-w-6xl gap-10 px-4 mx-auto mt-36 lg:flex-row lg:px-0">
-    <picture class="lg:w-96">
+    <picture width="500" height="500" class="lg:w-96">
         <source srcset={computerWebp} type="image/webp">
         <source srcset={computerPng} type="image/png">
         <img src={computerPng} alt="">
