--- a/src/components/molecules/Process.astro
+++ b/src/components/molecules/Process.astro
@@ -2,20 +2,20 @@
 import pencil from "../../images/pencil.webp"
 const steps = [
     {
-        title:"Analyse de vos besoins",
-        text:"Après un premier rendez-vous, nous analysons votre projet et cherchons la meilleure façon dont nous allons travailler. L'objectif étant de concevoir le parcours d'un utilisateur jusqu'à votre objectif.",
+        title: "Analyse de vos besoins",
+        text: "Après un premier rendez-vous, nous analysons votre projet et cherchons la meilleure façon dont nous allons travailler. L'objectif étant de concevoir le parcours d'un utilisateur jusqu'à votre objectif.",
     },
     {
-        title:"Design UX",
-        text:"Afin d'avoir l'expérience la plus fluide possible, nous réalisons une étude de cas. Des informations tirées, nous créons des wireframes (sorte de schéma) qui nous amènent à la réalisation d'une maquette interactive qui permet au client d'avoir un ressenti réel de ce que sera son projet.",
+        title: "Design UX",
+        text: "Afin d'avoir l'expérience la plus fluide possible, nous réalisons une étude de cas. Des informations tirées, nous créons des wireframes (sorte de schéma) qui nous amènent à la réalisation d'une maquette interactive qui permet au client d'avoir un ressenti réel de ce que sera son projet.",
     },
     {
-        title:"Développement",
-        text:"Une fois l'expérience conçue et selon votre projet, nous ferons des choix techniques qui offriront les meilleures performances pour votre site/application et assureront une maintenabilité dans le temps.",
+        title: "Développement",
+        text: "Une fois l'expérience conçue et selon votre projet, nous ferons des choix techniques qui offriront les meilleures performances pour votre site/application et assureront une maintenabilité dans le temps.",
     },
     {
-        title:"Mise en production",
-        text:"Une fois que tout est prêt, nous mettons en ligne le projet en nous assurant que tout fonctionne comme prévu.",
+        title: "Mise en production",
+        text: "Une fois que tout est prêt, nous mettons en ligne le projet en nous assurant que tout fonctionne comme prévu.",
     }
 ]
 ---
@@ -26,16 +26,20 @@ const steps = [
             Notre processus de travail
         </h2>
         <p>
-            Chaque nouveau projet pour notre équipe est un nouveau challenge à relever. Nous travaillons depuis plusieurs années sur de nombreux projets et proposons à nos clients une dynamique de travail élaborée.
+            Chaque nouveau projet pour notre équipe est un nouveau challenge à relever. Nous travaillons depuis
+            plusieurs années sur de nombreux projets et proposons à nos clients une dynamique de travail élaborée.
         </p>
     </div>
     <div class="relative flex flex-col col-span-2 gap-12 pl-5 mt-10 border-l-2 lg:mt-0 border-primary-darker">
         {steps.map(step=>
-            <div class="">
-                <h3 class="text-3xl before:w-[0.625rem] before:h-[0.625rem] before:absolute before:bg-primary-darker before:rounded-full before:mt-4 before:-left-[6px] before:border-2 before:border-lwhite">{step.title}</h3>
-                <p class="mt-6 max-w-[64ch]">{step.text}</p>
-            </div>
+        <div class="">
+            <h3
+                class="text-3xl before:w-[0.625rem] before:h-[0.625rem] before:absolute before:bg-primary-darker before:rounded-full before:mt-4 before:-left-[6px] before:border-2 before:border-lwhite">
+                {step.title}</h3>
+            <p class="mt-6 max-w-[64ch]">{step.text}</p>
+        </div>
         )}
     </div>
-    <img id="pen" class="absolute left-0 hidden rotate-180 bottom-20 w-60 2xl:-left-32 lg:block" src={pencil} alt="">
+    <img width="500" height="500" id="pen"
+        class="absolute left-0 hidden rotate-180 bottom-20 w-60 2xl:-left-32 lg:block" src={pencil} alt="">
 </section>
