--- a/src/components/molecules/OurRealizations.astro
+++ b/src/components/molecules/OurRealizations.astro
@@ -12,9 +12,9 @@ import saveurbelgePng from "../../images/saveurbelge.png"
     </div>
     <figure class="w-full lg:w-auto">
         <picture width="500" height="500" class="w-full lg:w-auto">
-            <source srcset={saveurbelgeWebp} type="image/webp">
-            <source srcset={saveurbelgePng} type="image/png">
-            <img src={saveurbelgePng} alt="Mockup représentant l'application web SaveurBelge">
+            <source width="500" height="500" srcset={saveurbelgeWebp} type="image/webp">
+            <source width="500" height="500" srcset={saveurbelgePng} type="image/png">
+            <img width="500" height="500" src={saveurbelgePng} alt="Mockup représentant l'application web SaveurBelge">
         </picture>
         <a href="/realisations" class="before:absolute before:inset-0"></a>
     </figure>
