--- a/src/components/molecules/OurSolutions.astro
+++ b/src/components/molecules/OurSolutions.astro
@@ -14,9 +14,9 @@ import saveurbelgePng from "../../images/mockup.png"
             l'ordinaire.</p>
         <figure class="max-w-xs">
             <picture>
-                <source srcset={saveurbelgeWebp} type="image/webp">
-                <source srcset={saveurbelgePng} type="image/png">
-                <img src={saveurbelgePng} alt="">
+                <source width="500" height="500" srcset={saveurbelgeWebp} type="image/webp">
+                <source width="500" height="500" srcset={saveurbelgePng} type="image/png">
+                <img width="500" height="500" src={saveurbelgePng} alt="">
             </picture>
         </figure>
     </div>
