--- a/src/components/molecules/WhatIsLoak.astro
+++ b/src/components/molecules/WhatIsLoak.astro
@@ -5,9 +5,9 @@ import computerWebp from "../../images/hero/computer-dynamic-clay.webp"
 
 <section class="flex flex-col items-center max-w-6xl gap-10 px-4 mx-auto mt-36 lg:flex-row lg:px-0">
     <picture width="500" height="500" class="lg:w-96">
-        <source srcset={computerWebp} type="image/webp">
-        <source srcset={computerPng} type="image/png">
-        <img src={computerPng} alt="">
+        <source width="500" height="500" srcset={computerWebp} type="image/webp">
+        <source width="500" height="500" srcset={computerPng} type="image/png">
+        <img width="500" height="500" src={computerPng} alt="">
     </picture>
     <div class="flex flex-col gap-4 lg:p-8">
         <h2 class="text-5xl">loak.studio c'est quoi?</h2>
