fix(realisations): image size

--- a/src/components/molecules/OurRealizations.astro
+++ b/src/components/molecules/OurRealizations.astro
@@ -11,10 +11,10 @@ import saveurbelgePng from "../../images/saveurbelge.png"
         <p class="lg:max-w-[30ch]">Nous travaillons sur une multitude de projets web, venez les découvrir</p>
     </div>
     <figure class="w-full lg:w-auto">
-        <picture width="500" height="500" class="w-full lg:w-auto">
-            <source width="500" height="500" srcset={saveurbelgeWebp} type="image/webp">
-            <source width="500" height="500" srcset={saveurbelgePng} type="image/png">
-            <img width="500" height="500" src={saveurbelgePng} alt="Mockup représentant l'application web SaveurBelge">
+        <picture class="w-full lg:w-auto">
+            <source width="378" height="378" srcset={saveurbelgeWebp} type="image/webp">
+            <source width="500" height="378" srcset={saveurbelgePng} type="image/png">
+            <img width="378" height="378" src={saveurbelgePng} alt="Mockup représentant l'application web SaveurBelge">
         </picture>
         <a href="/realisations" class="before:absolute before:inset-0"></a>
     </figure>
