--- a/src/components/molecules/Project.astro
+++ b/src/components/molecules/Project.astro
@@ -7,7 +7,7 @@ const { slug, mockup, icon, title, description, type } = Astro.props
 
 <div
     class="relative flex flex-col w-full max-w-6xl p-4 mx-auto mt-4 transition-all lg:items-center lg:mt-24 lg:shadow-lg lg:p-16 group lg:flex-row lg:gap-14 bg-lgrey-light lg:rounded-3xl">
-    <figure class="w-full max-w-sm">
+    <figure class="w-full max-w-sm my-10 lg:my-0">
         <img class="object-cover" src={mockup.filename} alt="">
     </figure>
     <div class="flex flex-col gap-6">
