init v1.1 with clean astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,7 @@
 ---
-import Main from "../layouts/Main.astro"
-import Hero from "../components/molecules/Hero.astro"
-import WhatIsLoak from "../components/molecules/WhatIsLoak.astro"
-import OurRealizations from "../components/molecules/OurRealizations.astro"
-import OurSolutions from "../components/molecules/OurSolutions.astro"
-import Process from "../components/molecules/Process.astro"
-import WhoAreWe from "../components/molecules/WhoAreWe.astro"
-import Ctacontact from "../components/molecules/Ctacontact.astro"
+import Main from "../layouts/main.astro";
 ---
+
 <Main>
-    <Hero/>
-    <WhatIsLoak/>
-    <OurRealizations/>
-    <OurSolutions/>
-    <Process/>
-    <WhoAreWe/>
-    <Ctacontact/>
+	loak.studio
 </Main>
