--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,7 +1,6 @@
 ---
-import Nav from "../components/molecules/Nav.astro"
-import Footer from "../components/molecules/Footer.astro"
-import "../style/tailwind.css"
+import Nav from "../components/Nav.astro"
+import Footer from "../components/Footer.astro"
 
 const { title = "loak.studio - Création de sites web dans la région de Tournai | Belgique", description = "Nous sommes une équipe des développeurs et designer dans la région de Tournai en Belgique et sommes disponibles pour vous aider dans vos projets digitaux que nous réalisons 100% à la main.", image = "https://loak.studio/share.png" } = Astro.props
 const url = new URL(Astro.request.url)
@@ -11,43 +10,43 @@ const url = new URL(Astro.request.url)
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{title}</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{title}</title>
 
-  <!-- Primary Meta Tags -->
-  <meta name="title" content={title}>
-  <meta name="description" content={description}>
+    <!-- Primary Meta Tags -->
+    <meta name="title" content={title}>
+    <meta name="description" content={description}>
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content={url.href}>
-  <meta property="og:title" content={title}>
-  <meta property="og:description" content={description}>
-  <meta property="og:image" content={image}>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content={url.href}>
+    <meta property="og:title" content={title}>
+    <meta property="og:description" content={description}>
+    <meta property="og:image" content={image}>
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content={url.href}>
-  <meta property="twitter:title" content={title}>
-  <meta property="twitter:description" content={description}>
-  <meta property="twitter:image" content={image}>
-  <link rel="canonical" href={Astro.canonicalURL}>
-  <script defer data-domain="loak.studio" src="https://plausible.io/js/plausible.js"></script>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content={url.href}>
+    <meta property="twitter:title" content={title}>
+    <meta property="twitter:description" content={description}>
+    <meta property="twitter:image" content={image}>
+    <link rel="canonical" href={Astro.canonicalURL}>
+    <script defer data-domain="loak.studio" src="https://plausible.io/js/plausible.js"></script>
 
 
-  <script>
-  import '../scripts/app.js';
-</script>
+    <script>
+        import '../scripts/app.js';
+    </script>
 </head>
 
 <body class="flex flex-col min-h-screen overflow-x-hidden lg:overflow-y-auto bg-lwhite">
-  <Nav />
-  <div class="flex-1">
-    <slot />
-  </div>
-  <Footer />
+    <Nav />
+    <div class="flex-1">
+        <slot />
+    </div>
+    <Footer />
 </body>
 
 </html>
