--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,9 +1,11 @@
 ---
-import Nav from "../components/Nav.astro"
-import Footer from "../components/Footer.astro"
+import Nav from "../components/organisms/Nav.astro"
+import Footer from "../components/organisms/Footer.astro"
+import '../style/app.css'
 
-const { title = "loak.studio - Création de sites web dans la région de Tournai | Belgique", description = "Nous sommes une équipe des développeurs et designer dans la région de Tournai en Belgique et sommes disponibles pour vous aider dans vos projets digitaux que nous réalisons 100% à la main.", image = "https://loak.studio/share.png" } = Astro.props
+let { title = "loak.studio - Création de sites web dans la région de Tournai | Belgique", description = "Nous sommes une équipe des développeurs et designer dans la région de Tournai en Belgique et sommes disponibles pour vous aider dans vos projets digitaux que nous réalisons 100% à la main.", image = "https://loak.studio/share.png" } = Astro.props
 const url = new URL(Astro.request.url)
+title = title.startsWith('loak.studio - ') ? title : title + " | loak.studio"
 ---
 
 <!DOCTYPE html>
@@ -41,7 +43,7 @@ const url = new URL(Astro.request.url)
     </script>
 </head>
 
-<body class="flex flex-col min-h-screen overflow-x-hidden lg:overflow-y-auto bg-lwhite">
+<body class="flex font-content flex-col min-h-screen overflow-x-hidden lg:overflow-y-auto bg-lwhite">
     <Nav />
     <div class="flex-1">
         <slot />
