feat(home): create components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,24 @@
 ---
+import Contact from "../components/molecules/Landing/Contact.astro";
+import Expertise from "../components/molecules/Landing/Expertise.astro";
+import Hero from "../components/molecules/Landing/Hero.astro";
+import References from "../components/molecules/Landing/References.astro";
+import Reinsurance from "../components/molecules/Landing/Reinsurance.astro";
+import Services from "../components/molecules/Landing/Services.astro";
+import StudyCases from "../components/molecules/Landing/StudyCases.astro";
+import Team from "../components/molecules/Landing/Team.astro";
+import Tools from "../components/molecules/Landing/Tools.astro";
 import Main from "../layouts/main.astro";
 ---
 
 <Main>
-	loak.studio
+	<Hero />
+	<Reinsurance />
+	<Expertise />
+	<Services />
+	<StudyCases />
+	<Tools />
+	<Team />
+	<References />
+	<Contact />
 </Main>
