--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -30,7 +30,7 @@ const { title, content } = Astro.props
         <figure class="rounded-md overflow-hidden">
             <img src="https://via.placeholder.com/1920x1080" alt="">
         </figure>
-        <h1 class="text-4xl font-bold">
+        <h1 class="text-4xl font-semibold">
             {title}
         </h1>
         <p>
