--- a/src/components/molecules/BlogPost/FeaturedBlogPost.astro
+++ b/src/components/molecules/BlogPost/FeaturedBlogPost.astro
@@ -8,7 +8,7 @@ const { title, text } = Astro.props
         <img src="https://via.placeholder.com/1920x1080" alt="">
     </figure>
     <div>
-        <h3 class="text-lg font-bold">{title}</h3>
+        <h3 class="text-lg font-semibold">{title}</h3>
         <p class="line-clamp-2">{text}</p>
         <ReadMore />
     </div>
