--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,7 +20,8 @@ const articles = [
     <Breadcrumb navigation={[ { title:"Blog", href:"/blog" } ]} />
     <div class="max-w-5xl mx-auto">
         <h1 class="font-title text-5xl mb-8 pl-4">Blog</h1>
-        <CurrentBlogPostPreview title="Titre" text="TExte" />
+        <CurrentBlogPostPreview href="/blog/g-a/" title="Pourquoi éviter Google analytics pour plausible"
+            text="TExte" />
         <div class="space-y-4">
             {articles.map(article=>
             <div class="border-t lg:border-none max-w-[64ch] pt-4">
